Add /beacons endpoint
