# src/doc/api.yaml
@@ -299,6 +299,23 @@ paths:
                 $ref: "#/components/schemas/ticket_validation_response"
               example:
                 train_id: "TICKET_INVALID"
+  
+  /beacons:
+    get:
+      tags: ["beacons"]
+      summary: Get the list of all the registered beacons
+      description: Get the list of beacons
+      operationId: getBeacons
+      responses:
+        '200':
+          description: Returns the list of beacons
+          content:
+            application/json:
+              schema:
+                type: array
+                description: The list of beacons
+                items:
+                  $ref: "#/components/schemas/beacon_id"
 
 
 components:
